# ves

./: .gitignore  Cargo.toml  README.md  generate_wat.sh
art-extractor/core/: Cargo.toml
art-extractor/core/src/: geom.rs  geom_art.rs  lib.rs  movie.rs  sprite.rs  surface.rs
art-extractor/core/src/geom/: generic.rs
art-extractor/core/src/surface/: test_fn_surface_iterate_2.rs  test_surface_iter.rs
art-extractor/gui/: Cargo.toml
art-extractor/gui/src/: components.rs  main.rs  movie.rs  style.rs
art-extractor/gui/src/components/: cursor.rs  mouse.rs  movie.rs  selection.rs  sprite.rs  sprite_table.rs
art-extractor/snes/: Cargo.toml
art-extractor/snes-cli/: Cargo.toml
art-extractor/snes-cli/src/: main.rs
art-extractor/snes/emu_scripts/mesen-s/: Readme.md  sprite_extractor.lua
art-extractor/snes/resources/test/: frame_117042.json  frame_189986.json  frame_189993.json
art-extractor/snes/resources/test/mesen-s_frames/: frame_199251.json  frame_199252.json  frame_199253.json  frame_199255.json  frame_199257.json  frame_199258.json  frame_199262.json  frame_199264.json  frame_199265.json  frame_199266.json  frame_199268.json  frame_199272.json  frame_199275.json  frame_199278.json  frame_199280.json  frame_199281.json  frame_199285.json  frame_199294.json  frame_199295.json  frame_199299.json
art-extractor/snes/src/: extract.rs  lib.rs  mesen.rs  obj.rs  test_util.rs
art/core/: Cargo.toml
art/core/src/: geom_art.rs  lib.rs  movie.rs  sprite.rs  surface.rs
art/core/src/surface/: test_fn_surface_iterate_2.rs  test_surface_iter.rs
art/gui/: Cargo.toml
art/gui/resources/test/: movie_10_frames.bincode
art/gui/resources/test/components/entities/: entities.ron
art/gui/src/: components.rs  main.rs
art/gui/src/components/: animations.rs  entities.rs  mouse.rs  movie.rs  selection.rs  sprite.rs  sprite_details.rs  sprite_table.rs  window.rs
art/gui/src/model/: entities.rs
art/snes/: Cargo.toml
art/snes-cli/: Cargo.toml
art/snes-cli/src/: main.rs
art/snes/emu_scripts/mesen-s/: Readme.md  sprite_extractor.lua
art/snes/resources/test/mesen-s_frames/: frame_199250.json  frame_199254.json  frame_199256.json  frame_199259.json  frame_199260.json  frame_199261.json  frame_199263.json  frame_199267.json  frame_199269.json  frame_199270.json  frame_199271.json  frame_199273.json  frame_199274.json  frame_199276.json  frame_199277.json  frame_199279.json  frame_199282.json  frame_199283.json  frame_199284.json  frame_199286.json  frame_199287.json  frame_199288.json  frame_199289.json  frame_199290.json  frame_199291.json  frame_199292.json  frame_199293.json  frame_199296.json  frame_199297.json  frame_199298.json
art/snes/src/: lib.rs  mesen.rs  obj.rs  test_util.rs
cache/: Cargo.toml
cache/src/: lib.rs
geom/: Cargo.toml
geom-artwork/: Cargo.toml
geom-artwork/src/: lib.rs
geom/src/: lib.rs
proto/: README.md  build.sh  run.sh
proto/common/: Cargo.toml
proto/common/src/: api.rs  gpu.rs  lib.rs  log.rs  util.rs
proto/core/: Cargo.toml
proto/core/src/: log.rs  main.rs  runtime.rs
proto/game/: Cargo.toml  build.rs  build.sh
proto/game/src/: core.rs  lib.rs
proto/logger/: Cargo.toml
proto/logger/src/: lib.rs
prototype/: run.sh
prototype/proto-common/: Cargo.toml
prototype/proto-common/src/: api.rs  gpu.rs  lib.rs  mem.rs  util.rs
prototype/proto-core/: Cargo.toml
prototype/proto-core/src/: core.rs  game.rs  game_api.rs  gfx.rs  lib.rs  libretro_core.rs  main.rs
prototype/proto-core/src/core/: geometry.rs  gpu.rs  mod.rs
prototype/proto-game/: .gitignore  Cargo.toml  Readme.md  build.rs  build.sh
prototype/proto-game/assets/gfx/: example.data
prototype/proto-game/src/: core_api.rs  lib.rs  rom_data.rs
