[workspace]

members = [
    "art-extractor/core",
    "art-extractor/gui",
    "art-extractor/snes",
    "art-extractor/snes-cli",
    "geom",
    "cache",
    "prototype/proto-common",
    "prototype/proto-core",
    "prototype/proto-game",
    "proto/common",
    "proto/core",
    "proto/game",
    "proto/logger",
]
