[package]
name = "art-extractor-core"
version = "0.1.0"
edition = "2021"

[dependencies]
rgb = { version = ">=0.8, <1" }
serde = { version = ">=1, <2", features = ["derive"], optional = true }
ves-geom = { path = "../../geom" }
ves-cache = { path = "../../cache" }

[features]
serde_support = ["serde", "ves-geom/serde", "rgb/serde"]