[package]
name = "ves-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = ">= 0.3, <1", features = ["canvas", "tokio"] }
art-extractor-core = { path = "../core", features = ["serde_support"] }
ves-cache = { path = "../../cache" }
ves-geom = { path = "../../geom" }
bincode = ">= 1.3, <2"
