[package]
name = "art-extractor-snes"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = ">=1"
art-extractor-core = { path = "../core", features = ["serde_support"] }
ves-geom = { path = "../../geom", features = ["serde"] }
ves-cache = { path = "../../cache" }
serde = { version = ">=1, <2", features = ["derive"] }
serde_json = ">=1, <2"
bincode = ">= 1.3"

[dev-dependencies]
bmp = ">= 0.4, <1"
