[package]
name = "ves-art-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
ves-art-core = { path = "../core", features = ["serde_support"] }
ves-cache = { path = "../../cache" }
ves-geom = { path = "../../geom" }
bincode = ">= 1.3, <2"
# Using this (untagged) version of egui because we need access to Context::load_texture()
# Additionally: hack to force NEAREST texture filtering for pixel-perfect rendering.
eframe = { git = "https://github.com/knonderful/egui.git", rev = "78704fc57a5d74813245a94e120b67f8e438b9cd", features = ["default_fonts", "egui_glow", "persistence"] }
serde = { version = ">=1, <2", features = ["derive"] }
linked-hash-map = { version = ">=0.5, <1", features = ["serde_impl"] }
chrono = ">= 0.4, <1"
log = ">=0.4, <1"
simple_logger = ">= 2.1, <3"

[dev-dependencies]
ron = ">= 0.7, <1"
