[package]
name = "ves-art-snes"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = ">=1, <2"
ves-art-core = { path = "../core", features = ["serde_support"] }
ves-geom = { path = "../../geom", features = ["serde"] }
ves-cache = { path = "../../cache" }
serde = { version = ">=1, <2", features = ["derive"] }
serde_json = ">=1, <2"

[dev-dependencies]
bincode = ">= 1.3, <2"
bmp = ">= 0.4, <1"
