[package]
name = "ves-proto-core"
version = "0.1.0"
edition = "2021"

[dependencies]
ves-proto-common = { path = "../common" }
anyhow = ">=1, <2"
wasmtime = "0.34.1"
chrono = "0.4.19"
ves-art-core = { path = "../../art/core", features = ["serde_support"] }
bincode = ">= 1.3, <2"
parity-wasm = "0.42.2"
sdl2 = ">= 0.35, <1"
log = ">= 0.4, <1"
simple_logger = ">= 2.1, <3"
