[package]
name = "ves-proto-game"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wee_alloc"]

[dependencies]
wee_alloc = { version = "0.4.5", optional = true }
log = ">=0.4, <1"
ves-proto-common = { path = "../common" }
ves-proto-logger = { path = "../logger" }

[build-dependencies]
art-extractor-core = { path = "../../art-extractor/core", features = ["serde_support"] }
bincode = ">= 1.3, <2"
staticgen = { git = "https://github.com/knonderful/staticgen.git", rev = "071443ffae16c262544be3a61d73953b939bff3e" }
serde = ">=1.0.136, <2"