[package]
name = "proto-core"
version = "0.1.0"
authors = ["Roel van Alst <roel.vanalst@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasmtime = "0.23.0"
anyhow = "1.0.38"
parity-wasm = "0.42.1"
libretro-backend = "0.2.1"