[package]
name = "proto-game"
version = "0.1.0"
authors = ["knonderful <knonderful@hotmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wee_alloc"]

[dependencies]
proto-common = { path = "../proto-common" }
wee_alloc = { version = "0.4.5", optional = true }
